# remissbanken-test-repo

./: .gitignore  pyproject.toml
remissDjango/: requirements.txt
remissDjango/cards/: models.py  serializers.py  urls.py  views.py
remissDjango/cards/migrations/: 0001_initial.py  0002_card_question_type.py
remissDjango/config/: asgi.py  settings.py  urls.py  wsgi.py
remissDjango/decks/: models.py  serializers.py  urls.py  views.py
remissDjango/decks/migrations/: 0001_initial.py
